Fixed weird overflow issue on outlet settings

--- a/app/sass/platform/_outletSettings.scss
+++ b/app/sass/platform/_outletSettings.scss
@@ -14,8 +14,6 @@ Copyright 2016 Fresco News, Inc. All Rights Reserved.
  */
 
 .outlet-settings{
-	height:100%;
-	overflow:auto;
 	padding:64px 0 20px;
 }
 
