--- a/app/sass/platform/_rules.scss
+++ b/app/sass/platform/_rules.scss
@@ -61,6 +61,7 @@ body > div.wrapper > div > .container-fluid {
 	@include display(flex);
 	> .sidebar + div {
 		@include flex(1);
+		overflow:auto;
 	}
 }
 
